--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -1,10 +1,12 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Start Page</title>
+        <title>Java EE</title>
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     </head>
     <body>
-        <h1>Hello World!</h1>
+        <div style="font-size:150%;font-weight:100;font-family: sans-serif;text-align: center;margin-top: 40vh;">
+            <a href="/JAX-RS_Rx/api/location">Simple CompletionStage example</a>
+        </div>
     </body>
 </html>
